clusters/building-blocks/security/apps/vaultwarden/app/vw-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: security
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: websockets
      protocol: TCP
      port: 3012
      targetPort: 3012
